--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>RWNA Engineering</title>
+<link rel="icon" type="image/x-icon" href="https://rwna.codestudio.my/favicon.ico" />
 <meta name="description" content="RWNA Engineering" />
 <meta name="author" content="RWNA" />
 
